--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>goit-markup-hw-05</title>
+    <title>goit-markup-hw-06</title>
   </head>
 
   <body>
@@ -393,7 +393,8 @@
         </div>
       </section>
     </main>
-    <!-- adress section-->
+
+    <!-- FOOOOOOOOTER -->
 
     <footer class="footer">
       <div class="container footer-address">
@@ -462,15 +463,74 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+
+    <!-- modal window -->
+
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button class="button-close" type="button" data-modal-close>
           <svg class="icon-close" width="18" height="18">
             <use href="images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="backdrop-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form class="modal-form">
+          <label class="modal-label">
+            <span class="modal-label-text">Имя</span>
+            <span class="modal-wrap">
+              <input type="text" name="user_name" class="modal-input" />
+              <svg class="modal-icon" width="18" heght="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-label">
+            <span class="modal-label-text">Имя</span>
+            <span class="modal-wrap">
+              <input type="tel" name="user_tel" class="modal-input" />
+              <svg class="modal-icon" width="18" heght="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-label">
+            <span class="modal-label-text">Имя</span>
+            <span class="modal-wrap">
+              <input type="email" name="user_email" class="modal-input" />
+              <svg class="modal-icon" width="18" heght="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-label">
+            <span class="modal-label-text">Имя</span>
+            <textarea
+              name="user_text"
+              placeholder="Введите текст"
+              class="modal-text-area"
+            ></textarea>
+          </label>
+          <div class="modal-policy">
+            <label class="modal-policy-label">
+              <input type="checkbox" name="policy" class="modal-check" />
+              <span class="modal-custom-check visually-hidden">
+                <svg width="11" height="8" class="modal-custom-icon">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+              </span>
+              <span class="modal-policy-text"
+                >Соглашаюсь с рассылкой и принимаю
+                <a href="" class="modal-policy-link link"
+                  >Условия договора</a
+                ></span
+              >
+            </label>
+          </div>
+          <button class="button primary" type="submit">Заказать услугу</button>
+        </form>
       </div>
     </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
