--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       <div class="container footer-address">
         <div class="foooter-address-cont">
           <a class="footer-logo" href="/">
-            Web<span class="footer-color">Studio</span>
+            Web<span class="footer-color white">Studio</span>
             <!-- <img src="./images/WebStudio.svg" alt="logo"> -->
           </a>
           <address>
@@ -461,12 +461,30 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subscribe-title white">Подпишитесь на рассылку</p>
+          <form class="subscribe-form">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="subscribe-input"
+              placeholder="E-mail"
+            />
+            <button class="button primary footer-button" type="submit">
+              Подписаться
+              <svg class="subscibe-icon" width="24" height="24">
+                <use href="images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
     <!-- modal window -->
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="button-close" type="button" data-modal-close>
           <svg class="icon-close" width="18" height="18">
@@ -479,31 +497,31 @@
             <span class="modal-label-text">Имя</span>
             <span class="modal-wrap">
               <input type="text" name="user_name" class="modal-input" />
-              <svg class="modal-icon" width="18" heght="18">
+              <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </span>
           </label>
           <label class="modal-label">
-            <span class="modal-label-text">Имя</span>
+            <span class="modal-label-text">Телефон</span>
             <span class="modal-wrap">
               <input type="tel" name="user_tel" class="modal-input" />
-              <svg class="modal-icon" width="18" heght="18">
+              <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </span>
           </label>
           <label class="modal-label">
-            <span class="modal-label-text">Имя</span>
+            <span class="modal-label-text">Почта</span>
             <span class="modal-wrap">
               <input type="email" name="user_email" class="modal-input" />
-              <svg class="modal-icon" width="18" heght="18">
+              <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </span>
           </label>
           <label class="modal-label">
-            <span class="modal-label-text">Имя</span>
+            <span class="modal-label-text">Комментарий</span>
             <textarea
               name="user_text"
               placeholder="Введите текст"
@@ -512,21 +530,26 @@
           </label>
           <div class="modal-policy">
             <label class="modal-policy-label">
-              <input type="checkbox" name="policy" class="modal-check" />
-              <span class="modal-custom-check visually-hidden">
-                <svg width="11" height="8" class="modal-custom-icon">
-                  <use href="./images/icons.svg#icon-vector"></use>
+              <input
+                type="checkbox"
+                name="policy"
+                class="modal-check visually-hidden"
+              />
+              <!-- <span>
+                <svg width="16" height="16" class="modal-custom-icon">
+                  <use href="./images/icons.svg#icon-checked"></use>
                 </svg>
-              </span>
+              </span> -->
+
               <span class="modal-policy-text"
-                >Соглашаюсь с рассылкой и принимаю
-                <a href="" class="modal-policy-link link"
-                  >Условия договора</a
+                >Соглашаюсь с рассылкой и принимаю &nbsp;
+                <a href="" class="modal-policy-link link">
+                  Условия договора</a
                 ></span
               >
             </label>
           </div>
-          <button class="button primary" type="submit">Заказать услугу</button>
+          <button class="button primary" type="submit">Отправить</button>
         </form>
       </div>
     </div>
